# lsd

./: .gitignore  LICENSE-APACHE-2.0  LICENSE-MIT  README.md
java/: README.md  build.gradle.kts  settings.gradle.kts
java/src/main/java/kirillsemyonkin/lsdata/: LSD.java
java/src/main/java/ru/kirillsemyonkin/lsdata/: LSD.java
java/src/test/java/kirillsemyonkin/lsdata/: ParsingError.java  ParsingPass.java  Using.java
java/src/test/java/ru/kirillsemyonkin/lsdata/: ParsingError.java  ParsingPass.java  Using.java
rust/: Cargo.toml  README.md  rustfmt.toml
rust/src/: lib.rs
rust/tests/: parsing-error.rs  parsing-pass.rs  using.rs
